Fixed the integration tests to work with the test containers